--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "embla-carousel-react": "^8.0.0-rc18",
     "joi": "^17.11.0",
     "lucide-react": "^0.303.0",
+    "ngprogress": "^1.1.3",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
+    "react-loading-overlay": "^1.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.1",
@@ -38,9 +41,12 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.10.6",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-loading-overlay": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -48,8 +54,11 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "file-saver": "^2.0.5",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
+    "jszip": "^3.10.1",
+    "jszip-utils": "^0.1.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
