--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
     "jszip": "^3.10.1",
-    "jszip-utils": "^0.1.0",
+    "@types/jszip-utils": "^0.1.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
