--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.1",
+    "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
@@ -58,7 +59,7 @@
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
     "jszip": "^3.10.1",
-    "@types/jszip-utils": "^0.1.0",
+    "jszip-utils": "^0.1.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
