--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0-rc18",
     "joi": "^17.11.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.303.0",
     "ngprogress": "^1.1.3",
     "nprogress": "^0.2.0",
@@ -32,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
+    "react-leaflet": "^4.2.1",
     "react-loading-overlay": "^1.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-query": "^3.39.3",
